fixed map issue by setting the z-index to 0 instead of -2

--- a/style.css
+++ b/style.css
@@ -34,8 +34,9 @@ body{
 }
 #map { 
     height: 360px;
+    width: 100vw;
     position: relative;
-    z-index: -2;
+    z-index: 0;
  }
 
 .top-background{
